--- a/drones.html
+++ b/drones.html
@@ -31,7 +31,7 @@ limitations under the License.
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
-
+<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
@@ -2486,6 +2486,7 @@ limitations under the License.
           adventure.</li>
       </ul>
       </p>
+      <amp-youtube data-videoid="Dr4g1dT5RCk" layout="responsive" width="480" height="270"></amp-youtube>
       <p class="mb1">
         And with options spanning casual indoor drones for kids to professional-grade models for adventurers, there’s a
         drone
