--- a/drones.html
+++ b/drones.html
@@ -31,7 +31,7 @@ limitations under the License.
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
-<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+  <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
@@ -2440,13 +2440,14 @@ limitations under the License.
 
       <p class="mb1">
         It’s not just the coastlines lighting up this winter—skies across the U.S. are buzzing with a mysterious new
-        trend.
+        trend. Unmanned aerial vehicles. Quite simply, drones.
         Drones are taking center stage, not just as UFOs of curiosity but as *the* <a
           href="https://amzn.to/3BC6FMF">holiday gift for 2024! Click Here to Shop for a wide range of drones!</a> From
         New
         Jersey’s
         shorelines to Massachusetts’ backyards, these flying marvels are capturing imaginations like RC cars of the 21st
-        century—except this time, they fly!
+        century—except this time, they fly! The Mothership called she's hosting a swaree for Santa. Rudoph and the other
+        reindeer are worried that drones will take over their jobs.
       </p>
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
       <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
