--- a/drones.html
+++ b/drones.html
@@ -2442,11 +2442,12 @@ limitations under the License.
         It’s not just the coastlines lighting up this winter—skies across the U.S. are buzzing with a mysterious new
         trend. Unmanned aerial vehicles. Quite simply, drones.
         Drones are taking center stage, not just as UFOs of curiosity but as *the* <a
-          href="https://amzn.to/3BC6FMF">holiday gift for 2024! Click Here to Shop for a wide range of drones!</a> From
+          href="https://amzn.to/3BC6FMF">holiday gift for 2024!</a> From
         New
         Jersey’s
         shorelines to Massachusetts’ backyards, these flying marvels are capturing imaginations like RC cars of the 21st
-        century—except this time, they fly! The Mothership called she's hosting a swaree for Santa. Rudoph and the other
+        century—except this time, they fly! The Mothership called she's hosting a party for Santa & Mrs Claus. Rudoph
+        and the other
         reindeer are worried that drones will take over their jobs.
       </p>
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
