--- a/drones.html
+++ b/drones.html
@@ -2446,9 +2446,9 @@ limitations under the License.
         New
         Jersey’s
         shorelines to Massachusetts’ backyards, these flying marvels are capturing imaginations like RC cars of the 21st
-        century—except this time, they fly! The Mothership called she's hosting a party for Santa & Mrs Claus. Rudoph
+        century—except this time, they fly! The Mothership called she's hosting a party for Santa & Mrs Claus. Rudolph
         and the other
-        reindeer are worried that drones will take over their jobs.
+        reindeer are worried that drones will take over their jobs.  Just don't name your drone Comet.
       </p>
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
       <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
