--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@ limitations under the License.
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
-    content="drones - Amazon links for drones - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
+    content="Amazon Games - Amazon links for games - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
   <meta name="keywords"
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
@@ -2408,11 +2408,10 @@ limitations under the License.
           <h1 class="ampstart-fullpage-hero-heading mb3">
             <span class="ampstart-fullpage-hero-heading-text">
               <span class="h6 block caps" style="color:rgb(255, 255, 255)"></span><span class="h1 block bold caps my1"
-                style="color:rgb(255, 255, 255); background-color:#000">Drones Over Us: </span><span
+                style="color:rgb(255, 255, 255); background-color:#000">Amazon Games: </span><span
                 class="h6 block caps" style="color:rgb(255, 255, 255);background-color:#000; height:1.4rem; font-size:1.4rem; 
   -ms-transform: translateY(-50%);
-  transform: translateY(-50%);">The Ultimate Holiday Gift
-                Soaring Into 2024</span>
+  transform: translateY(-50%);">The Ultimate Holiday Gift</span>
             </span>
           </h1>
 
@@ -2428,21 +2427,137 @@ limitations under the License.
   </div>
 
   <main id="content" role="main">
-    <a href="https://amzn.to/3BC6FMF" target="_blank"
+    <a href="https://amzn.to/3ZOhSSC" target="_blank"
       style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
       Click Here For Amazing drones on Amazon!
     </a>
     <br>
     <article class="px3">
-      <h2 id="story" class="my4 theme2-anchored"><a href="https://amzn.to/3BC6FMF">Send in the Drones!</a></h2>
+      <h2 id="story" class="my4 theme2-anchored"><a href="https://amzn.to/3ZOhSSC">Send in the Drones!</a></h2>
 
 
+<p class="mb1"><amp-youtube data-videoid="dadLtfngQH8" layout="responsive" width="480" height="270"></amp-youtube>Amazon Games has been actively developing and publishing a variety of video games across multiple genres, offering
+diverse experiences for players. Here's an overview of their notable titles and upcoming projects:
 
+**Released Titles:**
+
+1. **King of Meat**: Developed by Glowmade and published by Amazon Games, King of Meat is a cooperative action game that
+supports one to four players. It features hack-and-slash combat and user-generated content, allowing players to create
+and share their own dungeons. The game is available on PlayStation 5, Xbox Series X|S, Steam, and Nintendo Switch.
+
+2. **Throne and Liberty**: This free-to-play MMORPG, developed by NCSOFT and published by Amazon Games, offers players
+the opportunity to explore expansive worlds, engage in large-scale battles, and experience dynamic weather systems that
+influence gameplay. The game emphasizes player choice and features a rich narrative set in a fantasy universe.
+
+3. **New World: Aeternum**: An internally developed MMORPG by Amazon Games, New World: Aeternum immerses players in a
+supernatural island filled with dangers and mysteries. The game combines exploration, crafting, and combat, allowing
+players to shape the world through their actions. It is available on PC and is slated for a console release with
+additional updates and content.
+
+4. **Lost Ark**: In collaboration with Smilegate RPG, Amazon Games published Lost Ark, a free-to-play action-packed RPG.
+Players embark on an odyssey to find the Lost Ark in a vast, vibrant world, exploring new lands, seeking out lost
+treasures, and engaging in thrilling combat. The game is available on PC via Steam.
+
+**Upcoming Projects:**
+
+1. **Tomb Raider**: Amazon Games is set to publish a new single-player Tomb Raider game developed by Crystal Dynamics.
+While specific details are limited, the game is expected to continue the legacy of the iconic Lara Croft, offering
+players an engaging action-adventure experience.
+
+2. **Lord of the Rings MMO**: Amazon Games is in the early stages of developing a massively multiplayer online game set
+in the Lord of the Rings universe. The game aims to provide an immersive experience in the rich world of Middle-earth,
+though specific details and a release date have not been announced.
+
+3. **Open-World Driving Game**: An open-world driving title is in development by Maverick Games, with Amazon Games
+serving as the publisher. Details about the game's setting, features, and release date are yet to be revealed.
+
+**Worlds and Settings:**
+
+- **King of Meat**: Features a fantasy world where players can create and explore dungeons, battling various creatures
+in cooperative gameplay.
+
+- **Throne and Liberty**: Set in a dynamic fantasy universe with expansive landscapes, diverse biomes, and a rich
+narrative influenced by player choices.
+
+- **New World: Aeternum**: Takes place on Aeternum, a mysterious island with supernatural elements, ancient secrets, and
+a constantly evolving environment shaped by player actions.
+
+- **Lost Ark**: Offers a vast, vibrant world filled with diverse regions, each with unique cultures, landscapes, and
+challenges, all centered around the quest for the powerful Lost Ark.
+
+**Considerations for Parents and Kids:**
+
+- **For Parents**: These games offer rich storytelling, cooperative gameplay, and opportunities for strategic thinking
+and problem-solving. However, it's important to consider the content and themes, as some games may contain fantasy
+violence and complex narratives. Reviewing the Entertainment Software Rating Board (ESRB) ratings and understanding each
+game's content can help determine suitability for your child.
+
+- **For Kids**: These games provide immersive worlds to explore, opportunities to play with friends, and engaging
+stories that can enhance creativity and critical thinking. If you're interested in fantasy adventures, cooperative
+gameplay, or expansive open-world experiences, these titles might appeal to you. Discussing your interest with your
+parents and highlighting the game's features can help in making a case for playing them.
+
+**Highlights of the Games:**
+
+- **King of Meat**: Emphasizes cooperative gameplay and creativity through user-generated content, allowing players to
+design and share their own dungeons.
+
+- **Throne and Liberty**: Features dynamic weather systems and large-scale battles, offering a constantly evolving
+gameplay experience.
+
+- **New World: Aeternum**: Combines exploration, crafting, and combat in a supernatural setting, with player actions
+directly influencing the game world.
+
+- **Lost Ark**: Offers fast-paced, action-oriented combat and a vast world to explore, with a focus on discovering
+treasures and engaging in epic quests.
+
+Amazon Games continues to expand its portfolio, aiming to deliver diverse and engaging experiences for players across
+different genres and platforms.</p>
+<p class="mb1">"Batman: Arkham Shadow" is an action-adventure virtual reality (VR) game developed by Camouflaj and published by Oculus
+Studios. Released on October 21, 2024, it is available exclusively for the Meta Quest 3 and Meta Quest 3S headsets.
+
+**Gameplay and Features:**
+
+- **Immersive Experience:** Players step into the role of Batman, experiencing Gotham City firsthand through VR. The
+game combines exploration, combat, and detective work, utilizing VR controllers to enhance interactivity.
+
+- **Combat System:** The game adapts the rhythmic, free-flow combat of the Arkham series for VR, allowing players to
+engage in hand-to-hand combat and use Batman's gadgets in a first-person perspective.
+
+- **Narrative:** Set between "Batman: Arkham Origins" and "Batman: Arkham Asylum," the story follows a younger Batman
+confronting a new adversary known as the Rat King, exploring his evolution into a symbol of hope for Gotham.
+
+**Reception:**
+
+"Batman: Arkham Shadow" has received positive reviews for its immersive gameplay and faithful adaptation of the Arkham
+series into VR. Critics have praised the game's combat mechanics, narrative depth, and the effective use of VR to
+enhance the player's experience. Some reviews note minor issues with controls during stealth sections and occasional
+bugs but consider it a standout title for the Meta Quest platform.
+
+**Availability:**
+
+The game is available for purchase through the Meta Store and is included for free with new Meta Quest 3 and 3S
+purchases until April 30, 2025.
+
+**Considerations for Parents and Players:**
+
+- **For Parents:** The game offers an engaging and immersive experience, combining action, problem-solving, and
+narrative elements. However, it contains combat sequences and themes typical of the Batman franchise. Reviewing the
+game's content and considering the age and maturity of the player is advisable.
+
+- **For Players:** If you're a fan of Batman or the Arkham series, this game provides a unique opportunity to embody the
+Dark Knight in a virtual setting. The immersive VR experience enhances the thrill of exploring Gotham City and engaging
+in Batman's vigilante activities.
+
+Overall, "Batman: Arkham Shadow" stands out as a significant addition to VR gaming, offering a comprehensive and
+immersive Batman experience exclusive to the Meta Quest platform.
+
+For a visual glimpse into the game, you might find the official gameplay trailer informative:</p>
       <p class="mb1">
         It’s not just the coastlines lighting up this winter—skies across the U.S. are buzzing with a mysterious new
         trend. Unmanned aerial vehicles. Quite simply, drones.
         Drones are taking center stage, not just as UFOs of curiosity but as *the* <a
-          href="https://amzn.to/3BC6FMF">holiday gift for 2024!</a> From
+          href="https://amzn.to/3ZOhSSC">holiday gift for 2024!</a> From
         New
         Jersey’s
         shorelines to Massachusetts’ backyards, these flying marvels are capturing imaginations like RC cars of the 21st
@@ -2488,14 +2603,14 @@ limitations under the License.
           adventure.</li>
       </ul>
       </p>
-      <amp-youtube data-videoid="Dr4g1dT5RCk" layout="responsive" width="480" height="270"></amp-youtube>
+     
       <p class="mb1">
         And with options spanning casual indoor drones for kids to professional-grade models for adventurers, there’s a
         drone
         for every interest.
       </p>
       <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF" target="_blank">
+        <a href="https://amzn.to/3ZOhSSC" target="_blank">
 
           <amp-img src="./img/drones/drone5field.jpg" width="285" height="285"
             alt="Dude with a beard wearing sunglasses and drones" layout="responsive"
@@ -2503,7 +2618,7 @@ limitations under the License.
         </a>
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF" target="_blank">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3ZOhSSC" target="_blank">
               <p class="h4" style>Click Me to shop for some awesome drones</p>
             </a>
           </header>
@@ -2551,7 +2666,7 @@ limitations under the License.
       <p class="mb1">
       </p>
       <figure class="ampstart-image-with-heading  m0 relative mb4">
-        <a href="https://amzn.to/3BC6FMF" target="_blank">
+        <a href="https://amzn.to/3ZOhSSC" target="_blank">
 
           <amp-img src="./img/drones/drone3.jpg" width="285" height="285"
             alt="Dude with a beard wearing sunglasses and drones" layout="responsive"
@@ -2559,7 +2674,7 @@ limitations under the License.
         </a>
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
-            <h2 class="h3 bold"></h2><a href="https://amzn.to/3BC6FMF" target="_blank">
+            <h2 class="h3 bold"></h2><a href="https://amzn.to/3ZOhSSC" target="_blank">
               <p class="h4" style></p>
             </a>
           </header>
