--- a/index.html
+++ b/index.html
@@ -3371,14 +3371,6 @@ limitations under the License.
         "G-V3TNNSX3H4": {
           "groups": "default"
         },
-
-           "gtag_id": "G-PHX4D1D223": {
-            "groups": "default"
-            },
-      
-        "G-PHX4D1D223": {
-          "groups": "default"
-        },
          "GT-KVMBLSP4":{ 
           "groups": "default"}
       }
@@ -3411,8 +3403,15 @@ limitations under the License.
             "groups": "default"
           }}
         }
-      }
-    }
+      
+    </script>
+    <script type="application/json"">
+  
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-V3TNNSX3H4');
     </script>
   </amp-analytics>
 
