--- a/index.html
+++ b/index.html
@@ -3353,8 +3353,21 @@ limitations under the License.
 </head>
 
 <body class="land-see">
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+  {
+    "vars" : {
+      "gtag_id": "G-V3TNNSX3H4",
+      "config" : {
+        "G-V3TNNSX3H4": { "groups": "default" }
+      }
+    }
+  }
+  </script>
+  </amp-analytics>
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
+
   <!-- Google Tag Manager-->
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
@@ -3362,59 +3375,6 @@ limitations under the License.
 
   <!-- Google Tag Manager -->
   <!---->
-  <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-  {
-    "vars": {
-      "gtag_id": "G-V3TNNSX3H4",
-      "config": {
-        "G-V3TNNSX3H4": {
-          "groups": "default"
-        },
-         "GT-KVMBLSP4":{ 
-          "groups": "default"}
-      }
-    },
-  
-  "triggers": {
-    "iniLoad": {
-      "on": "ini-load",
-      "request": "request"
-    },
-     "scrollPings": {
-      "on": "scroll",
-      "scrollSpec": {
-        "verticalBoundaries": [25, 50, 90],
-        "horizontalBoundaries": [10,20,30,40,50,60,70,80,90]
-      },
-      "request": "event"
-    }
-  }
-  }
-  </script>
-  </amp-analytics>
-  <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-    {
-      "vars": {
-        "gtag_id": "G-PHX4D1D223",
-        "config": {
-          "G-PHX4D1D223": {
-            "groups": "default"
-          }}
-        }
-      
-    </script>
-    <script type="application/json"">
-  
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-
-      gtag('config', 'G-V3TNNSX3H4');
-    </script>
-  </amp-analytics>
-
 
 
   <amp-animation id="recommendedSlideIn" layout="nodisplay">
