--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ limitations under the License.
     data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>-->
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <!-- AMP Analytics -->
@@ -3353,6 +3354,16 @@ limitations under the License.
 </head>
 
 <body class="land-see">
+  <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+<script id="hello-world" type="text/plain" target="amp-script">
+   window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-V3TNNSX3H4');
+</script>
+  </amp-script>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
   {
