--- a/coffee.html
+++ b/coffee.html
@@ -2333,6 +2333,16 @@ limitations under the License.
 </head>
 
 <body>
+    <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+      <script id="hello-world" type="text/plain" target="amp-script">
+       window.dataLayer = window.dataLayer || [];
+          function gtag() { dataLayer.push(arguments); }
+          gtag('js', new Date());
+    
+          gtag('config', 'G-V3TNNSX3H4');
+    </script>
+    </amp-script>
+
 
   <!-- Start Navbar -->
   <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 ">
