--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -3344,6 +3344,16 @@ limitations under the License.
 </head>
 
 <body class="land-see">
+    <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+      <script id="hello-world" type="text/plain" target="amp-script">
+       window.dataLayer = window.dataLayer || [];
+          function gtag() { dataLayer.push(arguments); }
+          gtag('js', new Date());
+    
+          gtag('config', 'G-V3TNNSX3H4');
+    </script>
+    </amp-script>
+
   <amp-animation id="entertainmentSlideIn" layout="nodisplay">
     <script type="application/json">
         {
