--- a/menu.amp.html
+++ b/menu.amp.html
@@ -2324,7 +2324,16 @@ limitations under the License.
 </head>
 
 <body>
-  <!-- Start Navbar -->
+  <!-- Start Navbar --><amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+    <script id="hello-world" type="text/plain" target="amp-script">
+     window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+  
+        gtag('config', 'G-V3TNNSX3H4');
+  </script>
+  </amp-script>
+
   <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"
       class="ampstart-navbar-trigger pr2">
