--- a/rschocolate.html
+++ b/rschocolate.html
@@ -7,7 +7,7 @@ Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-      http://www.apache.org/licenses/LICENSE-2.0
+      https://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
@@ -111,7 +111,7 @@ limitations under the License.
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CLora%7CLato" rel="stylesheet">
 
   <style amp-custom="">
-    /*! Bassplate | MIT License | http://github.com/basscss/bassplate */
+    /*! Bassplate | MIT License | https://github.com/basscss/bassplate */
 
     /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
     html {
@@ -1691,11 +1691,11 @@ limitations under the License.
     }
 
     .amp-carousel-button-next {
-      background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Next</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>')
+      background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="https://www.w3.org/2000/svg"><title>Next</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>')
     }
 
     .amp-carousel-button-prev {
-      background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Previous</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>')
+      background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="https://www.w3.org/2000/svg"><title>Previous</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>')
     }
 
     .ampstart-dropdown {
@@ -2367,7 +2367,7 @@ limitations under the License.
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
         <a href="https://x.com/minnowspace" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
+          aria-label="Link to AMP HTML Twitter"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="22.2"
             viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
@@ -2377,7 +2377,7 @@ limitations under the License.
       </li>
       <li>
         <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          aria-label="Link to AMP HTML Instagram"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 54 54">
             <title>instagram</title>
             <path
@@ -2387,7 +2387,7 @@ limitations under the License.
       </li>
       <li>
         <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="18.4"
             viewBox="0 0 56 43">
             <title>email</title>
             <path
