--- a/plaid.html
+++ b/plaid.html
@@ -24,6 +24,8 @@ limitations under the License.
   <link rel="canonical" href="https://www.minnowspace.com/amazon.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
+    <meta name="google-adsense-account" content="ca-pub-3239465181490887">
+
   <meta name="description"
     content="Plaid - Amazon links for plaid shirts - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
   <meta name="keywords"
