--- a/stories.amp.html
+++ b/stories.amp.html
@@ -23,6 +23,7 @@ limitations under the License.
   <meta name="amp-google-client-id-api" content="googleanalytics" />
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+  <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <style amp-boilerplate="">
     body {
