--- a/blackdoves.html
+++ b/blackdoves.html
@@ -24,6 +24,7 @@ limitations under the License.
   <link rel="canonical" href="https://www.minnowspace.com/blackdoves.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
+  <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
