instagram and links

--- a/hotels.html
+++ b/hotels.html
@@ -24,7 +24,7 @@ limitations under the License.
   <link rel="canonical" href="https://www.minnowspace.com/hotels.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
-    <meta name="google-adsense-account" content="ca-pub-3239465181490887">
+  <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <meta name="description"
     content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
@@ -2378,7 +2378,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+        <a href="https://www.instagram.com/minnowspace/" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Instagram"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 54 54">
             <title>instagram</title>
