--- a/index.html
+++ b/index.html
@@ -3425,8 +3425,24 @@ limitations under the License.
     <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
       <ul class="list-reset center m0 p0 flex justify-center nowrap">
         <li class="ampstart-nav-item">
-          <a href="stories.amp.html" class="text-decoration-none block">Stories</a>
+          <a href="stories.amp.html" class="text-decoration-none block" style="font-size:2rem;">Stories</a>
         </li>
+
+        <li class="ampstart-nav-item">
+          <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none block"
+            style="font-size:2rem;">Travel</a>
+        </li>
+
+        <li class="ampstart-nav-item">
+          <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none block"
+            style="font-size:2rem;">Food</a>
+        </li>
+        <li class="ampstart-nav-item">
+          <a href="stories.amp.html?category=entertainment#land-see-entertainment" class="text-decoration-none block"
+            style="font-size:2rem;">Entertainment</a>
+        </li>
+
+
         <li class="ampstart-nav-item ampstart-nav-dropdown relative">
           <!-- Start Dropdown -->
           <amp-accordion layout="container" disable-session-states=""
@@ -3437,9 +3453,7 @@ limitations under the License.
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html" class="text-decoration-none">All</a>
                 </li>
-                <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=design#land-see-design" class="text-decoration-none">Design</a>
-                </li>
+
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
@@ -3512,19 +3526,14 @@ limitations under the License.
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html" class="text-decoration-none">All</a>
                 </li>
-                <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=design#land-see-design" class="text-decoration-none">Design</a>
-                </li>
+
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
                 </li>
-                <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
-                    Culture</a>
-                </li>
+
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=entertainment#land-see-entertainment"
                     class="text-decoration-none">entertainment</a>
@@ -3554,7 +3563,7 @@ limitations under the License.
       </li>
 
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+        <a href="https://www.instagram.com/minnowspace/" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Instagram"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 54 54">
             <title>instagram</title>
@@ -3583,7 +3592,7 @@ limitations under the License.
       <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1"
         href="stories.amp.html?category&#x3D;fashion#land-see-fashion"></a>
       <h1 class="land-see-hero-title ampstart-title-lg bold pt2 mx2">
-        <a class="text-decoration-none" href="MinnowspaceEbel.html">Minnowspace</a>
+        <a class="text-decoration-none" href="index.html">Minnowspace</a>
       </h1>
       <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 px2 mb3">
         Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.
@@ -3616,7 +3625,8 @@ limitations under the License.
       we’re laying the foundation for something truly unique in the digital space. While future plans are shaping up
       behind
       the scenes, today you’ll find inspiring content, engaging conversations, and curated affiliate recommendations for
-      products and services that we believe in. Every time you choose one of these products, you’re not only supporting
+      <a href="./stories.amp.html">products and services</a> that we believe in. Every time you choose one of these
+      products, you’re not only supporting
       a
       great brand—you’re helping fuel the growth of Minnowspace.
     </p>
@@ -3835,7 +3845,7 @@ limitations under the License.
           </amp-instagram>
         </li>
         <li class="land-see-instagram-post flex-auto mx1 xs-hide sm-hide">
-          <amp-instagram data-shortcode="1hZgHomTjq" height="260px" layout="fixed-height">
+          <amp-instagram data-shortcode="DDvt7WjA1pW" height="260px" layout="fixed-height">
           </amp-instagram>
         </li>
       </ul>
@@ -3886,7 +3896,7 @@ limitations under the License.
           </amp-img></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+        <a href="https://www.instagram.com/minnowspace/" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Instagram"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 54 54">
             <title>instagram</title>
