--- a/menu.amp.html
+++ b/menu.amp.html
@@ -2377,7 +2377,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+        <a href="https://www.instagram.com/minnowspace/" target="_blank" class="inline-block p1"
           aria-label="Link to AMP HTML Instagram"><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 54 54">
             <title>instagram</title>
