--- a/index.html
+++ b/index.html
@@ -3366,7 +3366,22 @@ limitations under the License.
 
 </script>
   </amp-script>
-<!--maybe delete above-->
+  <!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+        {
+        "vars" : { 
+            "gtag_id": "G-V3TNNSX3H4", 
+            "config": { 
+                "G-V3TNNSX3H4": { 
+                      "groups": "default" 
+                      }
+                                      }
+              }
+          } 
+     </script>
+  </amp-analytics>
+  <!--maybe delete above-->
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
         {
