--- a/menu.amp.html
+++ b/menu.amp.html
@@ -2334,6 +2334,21 @@ limitations under the License.
         gtag('config', 'G-V3TNNSX3H4');
   </script>
   </amp-script>
+  <!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+        {
+        "vars" : { 
+            "gtag_id": "G-V3TNNSX3H4", 
+            "config": { 
+                "G-V3TNNSX3H4": { 
+                      "groups": "default" 
+                      }
+                                      }
+              }
+          } 
+     </script>
+  </amp-analytics>
 
   <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"
