--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3359,6 +3359,21 @@ limitations under the License.
           gtag('config', 'G-V3TNNSX3H4');
     </script>
   </amp-script>
+  <!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+        {
+        "vars" : { 
+            "gtag_id": "G-V3TNNSX3H4", 
+            "config": { 
+                "G-V3TNNSX3H4": { 
+                      "groups": "default" 
+                      }
+                                      }
+              }
+          } 
+     </script>
+  </amp-analytics>
 
   <amp-animation id="storySlideIn" layout="nodisplay">
     <script type="application/json">
