--- a/partycity.html
+++ b/partycity.html
@@ -2426,18 +2426,22 @@ limitations under the License.
 
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-      <amp-img width="140" height="106" alt="Welcome to Beck &amp; Galo Modern American 
-      Cuisine" layout="responsive" src="./img/partaycitay/14348555705_44fe39480c_b.jpg" media="(max-width: 415px)"></amp-img>
+      <amp-img width="13.5" height="4" alt="Welcome to Beck &amp; Galo Modern American 
+      Cuisine" layout="responsive" src="./img/partaycitay/ss.png" media="(max-width: 415px)"></amp-img>
       <amp-img height="390" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
-        src="./img/partaycitay/38102565031_40d05ff720_b.jpg" media="(min-width: 416px)"></amp-img>
+        src="./img/partaycitay/ss.png" media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
         <header class="p3">
           <p>
           <h1 class="ampstart-fullpage-hero-heading mb3">
             <span class="ampstart-fullpage-hero-heading-text">
               <span class="h6 block caps" style="color:rgb(255, 255, 255)"></span><span class="h1 block bold caps my1"
-                style="color:rgb(255, 255, 255); background-color:#000">Party City  </span><span
-                class="h6 block caps" style="color:rgb(255, 255, 255);background-color:#000; height:3rem; font-size:1.4rem; line-height:1.5rem">Where you belonged</span>
+                style="color:rgb(255, 255, 255); border-radius:1rem; width:20rem; max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto; backdrop-filter: blur(10px);" >Party City </span><span
+                class="h6 block caps" style="color:rgb(255, 255, 255);backdrop-filter: blur(10px); height:3rem; font-size:1.4rem; line-height:1.5rem; border-radius:1rem; max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;">Where You Belonged</span>
             </span>
           </h1>
           </p>
