--- a/partycity.html
+++ b/partycity.html
@@ -2482,7 +2482,12 @@ limitations under the License.
         The Origins of "Go Back to Party City"
         The phrase “Go back to Party City where you belong” was made famous on RuPaul's Drag Race Season 4. During a heated
         moment, drag queen Phi Phi O'Hara told Sharon Needles that she looked like a bad Halloween costume, saying, “Go back to
-        Party City where you belong.” The line was a biting jab, implying Sharon’s look was cheap and overly theatrical—like
+        Party City where you belong.” 
+                            <a href="https://amzn.to/49QRrjt">
+                            
+                              <amp-img src="./img/partaycitay/Sharon_Needles_Brillobox.jpg" width="11" height="15" alt="Lumberjack"
+                                layout="responsive"></amp-img>
+                            </a>The line was a biting jab, implying Sharon’s look was cheap and overly theatrical—like
         something you’d find at Party City, which is known for its mass-produced costumes and decorations. The quote quickly
         became iconic, often used to mock over-the-top, campy, or low-effort styles.</p>
                             <a href="https://amzn.to/49QRrjt">
