youtube snl bethenny frankel

--- a/drones.html
+++ b/drones.html
@@ -32,8 +32,8 @@ limitations under the License.
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 
   <style amp-boilerplate="">
@@ -2456,6 +2456,7 @@ limitations under the License.
   </div>
 
   <main id="content" role="main">
+    <amp-youtube data-videoid="5xngnT592Kc" layout="responsive" width="480" height="270"></amp-youtube>
     <a href="https://amzn.to/3BC6FMF" target="_blank"
       style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
       Click Here For Amazing drones on Amazon!
@@ -2473,11 +2474,15 @@ limitations under the License.
           href="https://amzn.to/3BC6FMF">holiday gift for 2024!</a> From
         New
         Jersey’s
-        shorelines to Massachusetts’ backyards, these flying marvels are capturing imaginations like RC cars of the 21st
-        century—except this time, they fly! The Mothership called she's hosting a party for Santa & Mrs Claus. Rudolph
+        shorelines to California, these flying marvels are capturing imaginations like RC cars of the 21st
+        century—except this time, they fly! The Mothership called she's hosting a party for Santa & Mrs Claus and
+        Bethenny Frankel. Rudolph
         and the other
         reindeer are worried that drones will take over their jobs. Just don't name your drone Comet.
       </p>
+    <amp-youtube data-videoid="ydU19E_ACpU" layout="responsive" width="480" height="270"></amp-youtube>
+
+
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
       <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
       <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
@@ -2516,7 +2521,7 @@ limitations under the License.
           adventure.</li>
       </ul>
       </p>
-      <amp-youtube data-videoid="Dr4g1dT5RCk" layout="responsive" width="480" height="270"></amp-youtube>
+
       <p class="mb1">
         And with options spanning casual indoor drones for kids to professional-grade models for adventurers, there’s a
         drone
