--- a/salshoes.html
+++ b/salshoes.html
@@ -2550,6 +2550,8 @@ limitations under the License.
         the 1990s
         and early 2000s, but their comeback feels global and multifaceted:
       </p>
+          <amp-youtube data-videoid="kievOCQ79B0" layout="responsive" width="480" height="270"></amp-youtube>
+          
       <p class="mb1">
         <b>Nostalgia Meets Utility:</b> Baggy jeans offer comfort and mobility, aligning with the desire for versatile,
         functional
