--- a/yotu.html
+++ b/yotu.html
@@ -85,10 +85,14 @@
      <!---->   <script>
             // Sample video IDs
             const videoIds = [
+            "hOQw_J-JjJk",
+            "KCJbIbySmk4",
+            "k_dLVdoRhFM",
                 "HL2mRKTVutM",
                 "56WBs0A4Kng",
                 "IkmLXvBfVv0",
                 "HSJOF4ulYG8",
+                "B4-L2nfGcuE",
                 "Dx5qFachd3A"
             ];
 
