--- a/beardirectory.html
+++ b/beardirectory.html
@@ -10,7 +10,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="canonical" href="https://amp.dev/documentation/examples/components/amp-next-page/index.html">
+  <link rel="canonical" href="https://www.minnowspace.com/beardirectory.html">
   <meta name="viewport" content="width=device-width">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <title>amp-next-page</title>
