--- a/index.html
+++ b/index.html
@@ -3647,7 +3647,7 @@ limitations under the License.
         core,
         Minnowspace is all about people—empowering individuals to share their voices while creating a platform where the
         rewards
-        are shared.
+        are shared.  We may be small fish but we don't have to play in a small pond. With modern technnology we will build a community platform with video and chat that is co-owned by YOU, not some bazillionaire. 
     </p>
 
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
@@ -3662,10 +3662,7 @@ limitations under the License.
       a
       great brand—you’re helping fuel the growth of Minnowspace.
     </p>
-    <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      For advertisers, Minnowspace offers an authentic and growing audience passionate about discovery and connection.
-      Our
-      vision is to create a thriving digital ecosystem where brands, creators, and audiences all find value.</p>
+
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
       Join us on this journey and stay tuned for exciting developments. Together, we’re building something
       extraordinary..</p>
