--- a/nik.html
+++ b/nik.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>drones</title>
-  <link rel="canonical" href="https://www.minnowspace.com/amazon.html">
+  <link rel="canonical" href="https://www.minnowspace.com/nik.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
