--- a/test.html
+++ b/test.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="canonical" href="https://www.minnowspace.com/test.html">
+
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
