--- a/index.html
+++ b/index.html
@@ -3372,7 +3372,7 @@ limitations under the License.
         "vars" : { 
             "gtag_id": "G-V3TNNSX3H4", 
             "config": { 
-                "G-V3TNNSX3H4": { 
+                "G-V3TNNSX3H4" { 
                       "groups": "default" 
                       }
                                       }
