--- a/dayofthejackal.html
+++ b/dayofthejackal.html
@@ -2427,7 +2427,7 @@ limitations under the License.
   
       If you’re looking for a TV show that grabs you by the collar and doesn’t let go, The Day of the Jackal is the series you need to
       start streaming immediately.</p> <p class="mb1">Available on Peacock, this intense thriller combines high-octane action, a morally
-      ambiguous narrative, and a mystery that will leave you on the edge of your seat episode after episode.
+      ambiguous narrative, espionage around every corner, and a mystery that will leave you on the edge of your seat episode after episode.
         </p>
             <amp-youtube data-videoid="shsIx-ZVL0E" layout="responsive" width="480" height="270"></amp-youtube>
 
@@ -2497,7 +2497,7 @@ limitations under the License.
         </p>
         
         <p class="mb1">
-      Streaming now on Peacock, The Day of the Jackal is a must-watch for fans of high-stakes storytelling and unforgettable characters.
+      Streaming now on Peacock, The Day of the Jackal is a must-watch television show for fans of high-stakes storytelling and unforgettable characters.
       If you loved Black Doves on Netflix, you’re going to be obsessed with this.
       
       So, grab some popcorn, buckle up, and get ready for the ride of your life with The Day of the Jackal. Just be warned: once you
